# mbglc

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  entrypoint.sh  mbglc.pc.in  version.txt
.github/actions/mbglc/: Dockerfile  action.yml  entrypoint.sh
.github/workflow/: main.yaml
.github/workflows/: main.yaml
example/: CMakeLists.txt  main.c
include/mbglc/: mbglc.h  version.h.in
rust/mapbox/: Cargo.toml
rust/mapbox-asset/: Cargo.toml
rust/mapbox-asset/examples/: assets.rs
rust/mapbox-asset/src/: lib.rs  pool.rs
rust/mapbox-sys/: Cargo.toml  build.rs  wrapper.c  wrapper.h
rust/mapbox/examples/: mbgl.rs
rust/mapbox/src/: lib.rs
rust/mobc-mapbox/: Cargo.toml
rust/mobc-mapbox/examples/: mobc.rs
rust/mobc-mapbox/src/: lib.rs
src/: CMakeLists.txt  MbglcConfig.cmake.in  mbglc.cpp
