[package]
name = "mapbox-asset"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tasks = { git = "https://github.com/kildevaeld/tasks-rs" }
tasks-vinyl = { git = "https://github.com/kildevaeld/tasks-rs" }
tasks-assets = { git = "https://github.com/kildevaeld/tasks-rs" }
mapbox = { path = "../mapbox", features = [ "serde" ] }
crossbeam-channel = "0.4"
image = "0.23"
bytes = "0.5"
mime = "0.3"

tokio = { version = "0.2", features = [ "blocking" ] }


[dev-dependencies]
tokio = { version = "0.2", features = [ "blocking", "macros" ] }
