[package]
name = "mobc-mapbox"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mobc = { version = "0.6" }
mapbox = { path = "../mapbox" }
crossbeam-channel = "0.5"
thiserror = "1"
futures = "0.3"
image = "0.23"
tokio = { version = "0.3", features = [ "sync" ] }

[dev-dependencies]
tokio = { version = "0.3", features = [ "full" ]}